--- a/public/index.html
+++ b/public/index.html
@@ -105,12 +105,10 @@
                 <div id="ml-hud-conf-bar" class="ml-cell-fill" style="--pct:0"></div>
               </div>
             </div>
-            <div class="ml-cell-row">
-              <span class="ml-cell-label">Crossings/min</span>
-              <strong id="ml-hud-scene-conf">0.0/m</strong>
-              <div class="ml-cell-track">
-                <div id="ml-hud-scene-bar" class="ml-cell-fill" style="--pct:0"></div>
-              </div>
+            <div class="ml-cell-row ml-cell-row-traffic">
+              <span class="ml-cell-label">Traffic Load</span>
+              <strong id="ml-hud-scene-conf">Light</strong>
+              <span id="ml-hud-traffic-msg" class="ml-cell-note">Waiting for enough frames to estimate live traffic load.</span>
             </div>
           </div>
 
