--- a/public/account.html
+++ b/public/account.html
@@ -53,14 +53,14 @@
     </section>
 
     <section class="account-history">
-      <h2>Pending Bets</h2>
+      <h2>Pending Tickets</h2>
       <div id="pending-container">
-        <p class="loading">Loading pending bets...</p>
+        <p class="loading">Loading pending tickets...</p>
       </div>
     </section>
 
     <section class="account-history">
-      <h2>Bet History</h2>
+      <h2>Round History</h2>
       <div id="history-container">
         <p class="loading">Loading...</p>
       </div>
