--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WHITELINEZ - Live Traffic Guessing Game</title>
+  <title>WHITELINEZ - Live Traffic Betting</title>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.svg" />
   <link rel="stylesheet" href="/css/main.css" />
@@ -173,7 +173,7 @@
         <div class="ml-showcase-head">
           <p class="ml-showcase-eyebrow">Live AI Engine</p>
           <h3>Real-Time Traffic Action</h3>
-          <p class="ml-showcase-sub">This section shows what the AI is seeing live on the road.<br>It counts vehicles passing through the area, measures confidence levels, and updates predictions in real time.<br><br>You&rsquo;re watching the system analyze traffic while players make guesses on how many vehicles will pass within a set time.<br><br>Play smart. Watch the road. See the data live.</p>
+          <p class="ml-showcase-sub">This section shows what the AI is seeing live on the road.<br>It counts vehicles passing through the area, measures confidence levels, and updates predictions in real time.<br><br>You&rsquo;re basically watching the system analyze traffic while users make predictions on how many vehicles will pass within a set time.<br><br>Bet smart. Watch the road. See the data live.</p>
         </div>
 
         <div class="ai-scene">
@@ -229,7 +229,7 @@
           <svg class="btn-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
           Back
         </button>
-        <h3 id="bp-title">Exact Count Challenge</h3>
+        <h3 id="bp-title">Exact Count Bet</h3>
         <p id="bp-market-label" class="bp-market-label"></p>
 
         <div class="bp-field">
@@ -274,11 +274,11 @@
         </div>
 
         <p id="bp-error" class="bp-error" role="alert"></p>
-        <button id="bp-submit" class="btn-primary btn-full">Submit Guess</button>
+        <button id="bp-submit" class="btn-primary btn-full">Place Bet</button>
 
         <div id="bp-active-bet" class="bp-active-bet hidden">
           <div class="bp-active-inner">
-            <span class="bp-active-label">Resolves in</span>
+            <span class="bp-active-label">Resolving in</span>
             <strong id="bp-countdown" class="bp-countdown">-</strong>
           </div>
         </div>
