--- a/public/index.html
+++ b/public/index.html
@@ -15,21 +15,31 @@
   <header class="site-header">
     <a href="/index.html" class="logo">
       <img src="/img/logo.png" alt="WHITELINEZ" />
-      <span class="logo-credit">created by ruel</span>
     </a>
     <nav>
       <span id="nav-balance" class="nav-balance hidden"></span>
       <span id="nav-auth">
-        <a href="/login.html" class="nav-link">Login</a>
-        <a href="/register.html" class="btn-nav-register">Register</a>
+        <a href="/login.html" class="nav-icon-btn" title="Login">
+          <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
+        </a>
+        <a href="/register.html" class="nav-icon-btn nav-icon-register" title="Create account">
+          <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><line x1="19" y1="8" x2="19" y2="14"/><line x1="22" y1="11" x2="16" y2="11"/></svg>
+        </a>
       </span>
       <span id="nav-user" class="hidden">
-        <a id="nav-admin-link" href="/admin.html" class="nav-link hidden">Admin</a>
+        <a id="nav-admin-link" href="/admin.html" class="nav-icon-btn nav-icon-admin hidden" title="Admin panel">
+          <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" aria-hidden="true">
+            <path d="M3 9V5h4M21 9V5h-4M3 15v4h4M21 15v4h-4" stroke-width="1.9"/>
+            <circle cx="12" cy="12" r="2.2" stroke-width="1.6"/>
+            <line x1="12" y1="9.5" x2="12" y2="9.8" stroke-width="1.4"/><line x1="12" y1="14.2" x2="12" y2="14.5" stroke-width="1.4"/>
+            <line x1="9.5" y1="12" x2="9.8" y2="12" stroke-width="1.4"/><line x1="14.2" y1="12" x2="14.5" y2="12" stroke-width="1.4"/>
+          </svg>
+        </a>
         <a href="/account.html" class="nav-icon-btn nav-avatar-btn" title="Account">
           <img id="nav-avatar" class="nav-avatar" alt="Profile" />
         </a>
         <button id="btn-logout" class="nav-icon-btn nav-icon-logout" title="Logout">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
+          <svg width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.9" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
         </button>
       </span>
     </nav>
@@ -171,66 +181,53 @@
 
       <div id="tab-ml-showcase" class="tab-content">
 
-        <!-- Banner -->
-        <div class="ai-banner-wrap">
-          <img class="ai-banner-img" src="/img/ai%20banner.png" alt="Live AI Engine" />
-        </div>
+        <!-- Banner + console unified card -->
+        <div class="ai-unit">
+          <div class="ai-banner-wrap">
+            <img class="ai-banner-img" src="/img/ai%20banner.png" alt="Live AI Engine" />
+          </div>
 
-        <!-- Console terminal -->
-        <div class="ai-console">
-          <div class="ai-console-bar">
-            <span class="ai-con-prompt">&gt;_</span>
-            <span class="ai-con-title">AI ENGINE — LIVE FEED</span>
-            <span class="ai-con-online"><span class="mls-pulse"></span>ONLINE</span>
-          </div>
-          <div class="ai-console-body">
-            <div class="ai-con-line">
-              <span class="ai-con-label">LIVE OBJECTS (SESSION)</span>
-              <span id="mls-live-objects" class="ai-con-val primary">0</span>
+          <!-- Merged console — connected directly below banner -->
+          <div class="ai-console ai-console-attached">
+            <div class="ai-console-bar">
+              <span class="ai-con-prompt">&gt;_</span>
+              <span class="ai-con-title">AI ENGINE — LIVE FEED</span>
+              <span class="ai-con-online"><span class="mls-pulse"></span>ONLINE</span>
             </div>
-            <div class="ai-con-line sub">
-              <span class="ai-con-label">RATE</span>
-              <span id="mls-live-rate" class="ai-con-val dim">0.0 objects/min</span>
+            <div class="ai-console-body">
+              <div class="ai-con-line">
+                <span class="ai-con-label">LIVE OBJECTS (SESSION)</span>
+                <span id="mls-live-objects" class="ai-con-val primary">0</span>
+              </div>
+              <div class="ai-con-line sub">
+                <span class="ai-con-label">RATE</span>
+                <span id="mls-live-rate" class="ai-con-val dim">0.0 objects/min</span>
+              </div>
+              <div class="ai-con-line">
+                <span class="ai-con-label">DELAYED FRAMES</span>
+                <span id="mls-delayed-frames" class="ai-con-val primary">—</span>
+              </div>
+              <div class="ai-con-line sub">
+                <span class="ai-con-label">LAST TELEMETRY</span>
+                <span id="mls-last-seen" class="ai-con-val dim">Waiting...</span>
+              </div>
+              <div class="ai-con-line">
+                <span class="ai-con-label">ROWS (24H)</span>
+                <span id="mls-rows-24h" class="ai-con-val primary">0</span>
+              </div>
+              <div class="ai-con-line sub">
+                <span class="ai-con-label">MODEL</span>
+                <span id="mls-model-name" class="ai-con-val dim">-</span>
+              </div>
+              <div class="ai-con-divider"></div>
+              <div class="ai-con-stream-head">
+                <span class="mls-pulse"></span>
+                <span>CAPTURE STREAM</span>
+              </div>
             </div>
-            <div class="ai-con-line">
-              <span class="ai-con-label">AVG CONFIDENCE</span>
-              <span id="mls-live-conf" class="ai-con-val primary">-</span>
+            <div id="mls-stream-list" class="mls-stream-list">
+              <p class="loading">Collecting live AI events...</p>
             </div>
-            <div class="ai-con-line sub">
-              <span class="ai-con-label">LAST TELEMETRY</span>
-              <span id="mls-last-seen" class="ai-con-val dim">Waiting...</span>
-            </div>
-            <div class="ai-con-line">
-              <span class="ai-con-label">ROWS (24H)</span>
-              <span id="mls-rows-24h" class="ai-con-val primary">0</span>
-            </div>
-            <div class="ai-con-line sub">
-              <span class="ai-con-label">MODEL</span>
-              <span id="mls-model-name" class="ai-con-val dim">-</span>
-            </div>
-          </div>
-        </div>
-
-        <!-- Progress bars -->
-        <div class="mls-bars">
-          <div class="mls-bar-row">
-            <div class="mls-bar-head"><span>Training Readiness</span><strong id="mls-readiness-text">0%</strong></div>
-            <div class="mls-bar-track"><div id="mls-readiness-fill" class="mls-bar-fill"></div></div>
-          </div>
-          <div class="mls-bar-row">
-            <div class="mls-bar-head"><span>Confidence Quality</span><strong id="mls-quality-text">0%</strong></div>
-            <div class="mls-bar-track"><div id="mls-quality-fill" class="mls-bar-fill alt"></div></div>
-          </div>
-        </div>
-
-        <!-- Capture stream -->
-        <div class="ai-stream-terminal">
-          <div class="ai-stream-bar">
-            <span class="mls-pulse"></span>
-            <span class="ai-stream-title">AI CAPTURE STREAM</span>
-          </div>
-          <div id="mls-stream-list" class="mls-stream-list">
-            <p class="loading">Collecting live ML events...</p>
           </div>
         </div>
 
