--- a/public/admin.html
+++ b/public/admin.html
@@ -554,6 +554,12 @@
           <p>Detection status, scan coverage, and visual box customization for live feed overlays.</p>
         </div>
 
+        <div class="admin-model-banner">
+          <span class="admin-model-pulse"></span>
+          <span class="admin-model-label">ACTIVE MODEL</span>
+          <span id="det-model-banner-name" class="admin-model-value">—</span>
+        </div>
+
         <div class="detection-status-grid">
           <article class="stat-card is-secondary">
             <div class="stat-val" id="det-status-model">-</div>
